# mirror-maestro

./: .env.example  .env.ubuntu.example  .gitattributes  .gitignore  .gitlab-ci.yml  BUGS_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ubuntu  LICENSE  README.md  README.ubuntu.md  SECURITY.md  alembic.ini  docker-compose.override.example.yml  docker-compose.ubuntu.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: e2e-live-gitlab.yml  release.yml  tests.yml
app/: __init__.py  config.py  database.py  main.py  models.py
app/api/: __init__.py  auth.py  backup.py  dashboard.py  export.py  group_defaults.py  health.py  instances.py  issue_mirrors.py  mirrors.py  pairs.py  search.py  tokens.py  topology.py  users.py
app/core/: api_rate_limiter.py  auth.py  encryption.py  gitlab_client.py  issue_scheduler.py  issue_sync.py  jwt_secret.py  logging_utils.py  mirror_gitlab_service.py  mirror_status_scheduler.py  rate_limiter.py  tls_keepalive.py
app/static/css/: style.css
app/static/js/: app.js  topology.js
app/templates/: index.html
docs/: ENTERPRISE_DEPLOYMENT.md  GITLAB_CICD.md  ISSUE_MIRRORING.md  ISSUE_MIRRORING_PLAN.md
docs/screenshots/: .gitkeep  README.md  demo-about.html  demo-backup.html  demo-dashboard-dark.html  demo-dashboard.html  demo-help.html  demo-instances.html  demo-issue-config-bottom.html  demo-issue-config.html  demo-mirrors.html  demo-pairs.html  demo-settings.html  demo-tokens.html  demo-topology.html
k8s/: README.md  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
k8s/app/: deployment.yaml  pvc.yaml  service.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
migrations/: README.md  env.py
migrations/versions/: .gitkeep
nginx/templates/: default-ssl.conf.template  default.conf.template
scripts/: SCREENSHOTS.md  create-db-volume.sh  download-vendor-assets.sh  generate-self-signed-cert.sh  migrate-lfs.sh  package.json  seed_data.py  setup-ssl.sh  take-screenshots.js
tests/: conftest.py  e2e_helpers.py  test_api_batch_sync.py  test_auth.py  test_auth_api.py  test_backup_api.py  test_core_rate_limiter.py  test_dashboard_api.py  test_database.py  test_e2e_cross_instance.py  test_e2e_issue_mirroring.py  test_e2e_live_gitlab.py  test_e2e_multi_group.py  test_e2e_multi_project.py  test_encryption.py  test_export_api.py  test_gitlab_client.py  test_group_defaults_api.py  test_health_and_root.py  test_health_api.py  test_instances_api.py  test_issue_mirrors_api.py  test_issue_scheduler.py  test_issue_sync_engine.py  test_mirror_gitlab_service.py  test_mirrors_api.py  test_pairs_api.py  test_robustness_improvements.py  test_search_api.py  test_tls_keepalive.py  test_tokens_api.py  test_topology_api.py  test_users_api.py
