[project]
name = "mirror-maestro"
version = "0.1.0"
description = "Orchestrate GitLab mirrors across multiple instance pairs with precision"
authors = [{name = "MrZoller"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-gitlab>=4.9.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "cryptography>=43.0.1",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (may be slow or require external services)",
    "live_gitlab: tests that talk to a real GitLab instance (opt-in via env vars)",
]
