[project]
name = "mirror-maestro"
version = "1.2.0"
description = "Orchestrate GitLab mirrors across multiple instance pairs with precision"
authors = [{name = "MrZoller"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-gitlab>=4.9.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "cryptography>=43.0.1",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (may be slow or require external services)",
    "live_gitlab: tests that talk to a real GitLab instance (opt-in via env vars)",
    "dual_instance: tests requiring two separate GitLab instances",
    "multi_project: tests with multiple projects in a group",
    "multi_group: tests with multiple groups/subgroups",
]
