[project]
name = "mirror-maestro"
version = "1.2.1"
description = "Orchestrate GitLab mirrors across multiple instance pairs with precision"
authors = [{name = "MrZoller"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "python-gitlab>=8.2.0",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "jinja2>=3.1.6",
    "cryptography>=46.0.7",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (may be slow or require external services)",
    "live_gitlab: tests that talk to a real GitLab instance (opt-in via env vars)",
    "dual_instance: tests requiring two separate GitLab instances",
    "multi_project: tests with multiple projects in a group",
    "multi_group: tests with multiple groups/subgroups",
]
